# cliset-rs

./: Cargo.toml  README.adoc
src/: arguments.rs  main.rs  options.rs
