[package]
name = "cliset"
version = "0.1.0"
authors = ["Tom Simmons (Tomboyo) <tomasimmons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=2.33.0"
itertools = "=0.8.2"

[dev-dependencies]
tempfile = "=3.1.0"
